# liblouis

./: .gitignore  CMakeLists.txt
VisualStudio/: Liblouis.def  Liblouis.rc  Liblouis.sln  Liblouis.vcxproj.filters  libLouis.vcxproj  liblouis.h  resource.h
fsi/: En-US-Custom.CTI  En-US-Trans.CTB  En-US-Unicode-Ethiopic.CTI  En-US-Unicode-Greek.CTI  En-US-Unicode-Hebrew.CTI
liblouis/: CMakeLists.txt  compileTranslationTable.c  config.h.cmake.in  liblouis.rc.in  lou_backTranslateString.c  lou_translateString.c
tables/: En-US-FSI-G1.ctb  En-US-FSI-G2.ctb  En-Ueb-FSI-G1.ctb  En-Ueb-FSI-G2.ctb  chardefs.cti  en-chardefs.cti  en-ueb-g1.ctb  en-ueb-g2.ctb  en-us-g1.ctb  nemeth.ctb  nemeth_edit.ctb  vi-south-g2.ctb
tables/fsi/: En-US-Overrides.CTI  En-US-Unicode-Cyrillic.CTI  En-US-Unicode-Latin.CTI  En-US-Unicode-Multilingual.CTI  En-US-Unicode-Special-Symbols.CTI  En-US-Unicode.CTI  Spaces_FSI.CTB
tests/braille-specs/: en-ueb-03-symbols.yaml  en-ueb-06-numeric_mode.yaml  en-us-g2.yaml  ta-ta-g1_harness.yaml
