cmake_minimum_required(VERSION 3.1...3.15)
project(Liblouis VERSION 3.15.0 LANGUAGES C
HOMEPAGE_URL "http://www.liblouis.org")
set(PROJECT_BUGREPORT liblouis-liblouisxml@freelists.org)
option(WIDECHARS_ARE_UCS4 "use 32-bit rather than 16-bit wide characters" true)
option(			  WITH_YAML "enable YAML-based tests" On)
if (NOT ${WITH_YAML})
set (WITHOUT_YAML 1)
endif()
configure_file(liblouis/config.h.in config.h)
if (WIN32)
  configure_file(liblouis/liblouis.rc.in liblouis.rc)
endif()

if (${MSVC})
add_compile_definitions("_CRT_SECURE_NO_WARNINGS")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W2")
    add_compile_options(/W2)
    endif()
add_subdirectory(liblouis)
